<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <!-- Here you put the rest of your current view-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:text="@string/title_home"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/violence_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:text="@string/dissatisfaction_level"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dissatisfaction_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:text="@string/dissatisfaction_level"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/dissatisfaction_radio_group"
                android:text="@string/dissatisfaction_level"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/radio_dissatisfied_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_dissatisfied_1" />

                <RadioButton
                    android:id="@+id/radio_dissatisfied_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_dissatisfied_2" />

                <RadioButton
                    android:id="@+id/radio_dissatisfied_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_dissatisfied_3" />

                <RadioButton
                    android:id="@+id/radio_dissatisfied_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_dissatisfied_4" />

                <RadioButton
                    android:id="@+id/radio_dissatisfied_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_dissatisfied_5" />

                <!--<RadioButton-->
                    <!--android:id="@+id/dissatisfied_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:button="@drawable/state_1"-->
                    <!--android:checked="true"-->
                     <!--/>-->

                <!--<RadioButton-->
                    <!--android:id="@+id/dissatisfied_2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:button="@drawable/state_2"-->
                    <!--android:checked="true"-->
                    <!--/>-->

                <!--<RadioButton-->
                    <!--android:id="@+id/dissatisfied_3"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:button="@drawable/state_3"-->
                    <!--android:checked="true"-->
                    <!--/>-->

                <!--<RadioButton-->
                    <!--android:id="@+id/dissatisfied_4"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:button="@drawable/state_4"-->
                    <!--android:checked="true"-->
                    <!--/>-->

                <!--<RadioButton-->
                    <!--android:id="@+id/dissatisfied_5"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:button="@drawable/state_5"-->
                    <!--android:checked="true"-->
                    <!--/>-->
            </RadioGroup>

            <EditText
                android:id="@+id/comment_text_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/submit_button"
                android:onClick="onClick"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.constraint.ConstraintLayout>